sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: not found: value j
	j=i-1
        ^AlgInsertionSort:8: error: not found: value j
	while (getValeur(j)<v) {
                         ^AlgInsertionSort:9: error: not found: value j
			setValeur(j+1,getValeur(j))
                                  ^AlgInsertionSort:10: error: not found: value j
			j=j-1
                        ^AlgInsertionSort:12: error: not found: value j
	setValeur(j+1,v)
                  ^